[package]
name         = "temporal-lens"
version      = "0.1.0"
authors      = ["Nicolas BARBOTIN <nicolas@barbot.in>", "Clément Poull"]
description  = "Temporal Lens Rust library - Temporal Lens is a telemetry infrastructure for Rust"
categories   = ["development-tools::profiling"]
keywords     = ["profiling", "telemetry"]
repository   = "https://github.com/temporal-lens-team/temporal-lens"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
edition      = "2018"

[dependencies]
