[package]
name         = "temporal-lens"
version      = "0.1.0"
authors      = ["Nicolas BARBOTIN <nicolas@barbot.in>", "Clément Poull"]
description  = "Temporal Lens Rust library - Temporal Lens is a telemetry infrastructure for Rust"
categories   = ["development-tools::profiling"]
keywords     = ["profiling", "telemetry"]
repository   = "https://github.com/temporal-lens-team/temporal-lens"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
edition      = "2018"

[features]
default = []
server-mode = ["serde"]

[target.'cfg(windows)'.dependencies.winapi]
# Fix `shared_memory` build error. Remove this as soon as it is fixed, because it forces a specific version of `winapi`
version = "0.*"
features = ["winerror", "handleapi", "winbase"]

[dependencies]
shared_memory = "0.11"
dirs = "2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
rand = "0.7"
